# Automated-Web-Scraping-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  JM_clubes_scrappinglistxlsxclubs.csv  docker-compose.yml  pyproject.toml  requirements.txt
config/: sources.yml
docs/: FEASIBILITY_MATRIX.md  GCP_DEPLOYMENT.md  README.md  SOURCE_ONBOARDING.md
scripts/: analyze_sources.py  disable_weekly_cron.sh  enable_weekly_cron.sh  run_weekly.py  run_weekly_docker.sh  selector_probe.py
src/multi_scrap/: __init__.py  cli.py  dedup.py  exporters.py  extractors.py  models.py  normalize.py  pipeline.py  playwright_fetcher.py  settings.py  sheets.py  source_analysis.py  source_loader.py  week_filter.py
src/multi_scrap/utils/: __init__.py  dates.py  diagnostics.py  http.py  links.py  text.py
